resources/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-busola
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: $DOMAIN
      http:
        paths:
          - backend:
              service:
                name: web
                port:
                  number: 8080
            path: /(.*)
            pathType: Prefix
          - backend:
              service:
                name: backend
                port:
                  number: 3001
            path: /backend(?:/|$)(.*)
            pathType: Prefix
status:
  loadBalancer:
    ingress:
      - ip: 34.77.84.51
